fix: margin right aligned nav button group

--- a/styles.css
+++ b/styles.css
@@ -320,7 +320,7 @@ nav .group {
   display: flex;
   position: absolute;
   right: 23px;
-  margin-right: 10px;
+  margin: 0.25em 0.75em;
 }
 nav .group button {
   position: relative;
@@ -652,6 +652,7 @@ form > button[type=submit]:hover {
   nav .group {
     left: 28px;
     top: 90px;
+    margin: 0;
   }
 
   h1 {
